<resources>
    <string name="app_name">My Contact</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="contact_list_fragment_label">Contact List</string>
    <string name="add_contact_fragment_label">Add Contact</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="upload">Upload</string>
    <string name="server_url">https://kweetecksee.000webhostapp.com/api/</string>
    <string name="read_url">https://kweetecksee.000webhostapp.com/api/contact/read.php</string>
    <string name="create_url">contact/create.php</string>
    <string name="download">Download</string>
    <string name="contact_id_error">Contact ID is missing.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>