<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="my.edu.tarc.contactlist202401.MainActivity">
    <item
        android:id="@+id/action_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_upload_24"
        android:title="@string/upload"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_download_24"
        android:title="@string/download"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/profile" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>