<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_contact_list">

    <fragment
        android:id="@+id/nav_contact_list"
        android:name="my.edu.tarc.contactlist202401.ui.contact_list.ContactListFragment"
        android:label="@string/contact_list_fragment_label"
        tools:layout="@layout/fragment_contact_list"/>
    <fragment
        android:id="@+id/nav_profile"
        android:name="my.edu.tarc.contactlist202401.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile"/>
    <fragment
        android:id="@+id/nav_add_contact"
        android:name="my.edu.tarc.contactlist202401.ui.add_contact.AddContactFragment"
        android:label="@string/add_contact_fragment_label"
        tools:layout="@layout/fragment_add_contact" />
</navigation>